--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -19,12 +19,16 @@ nav{
     text-align: center;
      width: 72px;
      height: 72px;
-     padding: 16px;
+     padding: 9px 15px;
      cursor: pointer;
      border-radius: 50%; 
+     margin-top: 3px;
 }
 .sidebar-icon:active{
     background-color: rgba(240, 239, 239, 0.897);
+}
+.sidebar-icon svg {
+    /* margin-top: -3px; */
 }
 .sidebar-icon div{
     -webkit-user-select:none;
@@ -85,7 +89,7 @@ nav{
     /* background-color: rgba(250, 250, 250, 0.719); */
     transition: transform 0.2s linear,bottom 0.2s linear;
 }
-.download{
+.download,.recovery{
     opacity: 0;
     position: absolute;
     right:  8px;
@@ -103,17 +107,18 @@ nav{
     -o-transform: scale(1.1);
     transform: scale(1.1);
 }
-.download:hover{
+.download:hover,.recovery:hover{
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
     -ms-transform: scale(1.1);
     -o-transform: scale(1.1);
     transform: scale(1.1);
+    
 }
 .img:hover .delete{
     opacity: 1;
 }
-.img:hover .download{
+.img:hover .download,.recovery{
     opacity: 1;
 }
 .title{
